Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <p>A city is a complex entity that can be analyzed both scientifically and socially. Geography bridges these perspectives, helping transform the city from a measurable object into a meaningful place shaped by human experience.
 </p>
         <iframe width="100%"
-        height="500"
+        height="488"
         frameborder="0"
         title="South Tangerang City in 1967"
-        src="https://felt.com/embed/map/Before-planning-ever-took-shape-s9Bd1gMRmSsmDp0h3UZTzrD?loc=-6.284599%2C106.72832%2C16.71z&legend=1&cooperativeGestures=1&link=1&geolocation=0&zoomControls=1&scaleBar=0"
+        src="https://felt.com/embed/map/Before-planning-ever-took-shape-s9Bd1gMRmSsmDp0h3UZTzrD?loc=-6.28555%2C106.727006%2C16z&legend=1&cooperativeGestures=1&link=1&geolocation=0&zoomControls=1&scaleBar=0"
         referrerpolicy="strict-origin-when-cross-origin">
         </iframe>
         <h3>USGS Declassified data | OpenStreetMap</h3>
@@ -48,7 +48,7 @@
                     <img src="assets/img/bintaro_jaya_cbd.png" alt="Bintaro Jaya CBD" class="project-thumbnail">
                     <h3>CBD Delineation in South Tangerang</h3>
                     <p class="project-meta-preview">2026 </p>
-                    <p>Central Business District delineation analysis using a multi-criteria spatial approach to identify the characteristics and boundaries of the CBD area.</p>
+                    <p>Central Business District delineation analysis using spatial weighting approach to identify the characteristics and boundaries of the CBD area.</p>
                 </a>
 
                 <!-- Project 2 -->
