Update projects.html with new project details

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,15 @@
     <main>
         <section class="content-section">
             <div class="projects-grid">
-                <!-- Project 1: CBD Delineation -->
+                <!-- Project 1: Rural Agriculture -->
+                <a href="project-agri.html" class="project-card-preview">
+                    <img src="assets/img/agri-field.png" alt="Green Space Analysis" class="project-thumbnail">
+                    <h3>Agriculture in the Vicinity of Rural Settlements</h3>
+                    <p class="project-meta-preview">Agricultural Geography</p>
+                    <p>A Buffer-Based Remote Sensing Analysis</p>
+                </a>
+                
+                <!-- Project 2: CBD Delineation -->
                 <a href="project-cbd.html" class="project-card-preview">
                     <img src="assets/img/bintaro_jaya_cbd.png" alt="Bintaro Jaya CBD" class="project-thumbnail">
                     <h3>CBD Delineation in South Tangerang City</h3>
@@ -122,4 +130,5 @@
         });
     </script>
 </body>
+
 </html>
