--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="project-cbd.html" class="project-card-preview">
                     <img src="assets/img/bintaro_jaya_cbd.png" alt="Bintaro Jaya CBD" class="project-thumbnail">
                     <h3>CBD Delineation in South Tangerang</h3>
-                    <p class="project-meta-preview">2026 </p>
+                    <p class="project-meta-preview">Urban Geography</p>
                     <p>Central Business District delineation analysis using spatial weighting approach to identify the characteristics and boundaries of the CBD area.</p>
                 </a>
 
@@ -118,5 +118,6 @@
     </script>
 </body>
 </html>
+
 
 
