--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                 <a href="project-cbd.html" class="project-card-preview">
                     <img src="assets/img/bintaro_jaya_cbd.png" alt="Bintaro Jaya CBD" class="project-thumbnail">
                     <h3>CBD Delineation in South Tangerang City</h3>
-                    <p class="project-meta-preview">2026</p>
+                    <p class="project-meta-preview">Urban Geography</p>
                     <p>Central Business District delineation analysis using a multi-criteria spatial approach to identify the characteristics and boundaries of the CBD area.</p>
                 </a>
 
@@ -132,3 +132,4 @@
 </body>
 
 </html>
+
