--- a/project-cbd.html
+++ b/project-cbd.html
@@ -27,7 +27,7 @@
     <article class="project-detail">
         <!-- Project Header -->
         <header class="project-header">
-            <span class="project-number">2026</span>
+            <span class="project-number">Urban Geography</span>
             <h1>CBD Delineation in South Tangerang City</h1>
         </header>
 
@@ -180,5 +180,6 @@
     </footer>
 </body>
 </html>
+
 
 
