--- a/project-agri.html
+++ b/project-agri.html
@@ -126,7 +126,7 @@
     <article class="project-detail">
         <!-- Project Header -->
         <header class="project-header">
-            <span class="project-number">2023</span>
+            <span class="project-number">Agricultural Geography</span>
             <h1>Agriculture in the Vicinity of Rural Settlements</h1>
         </header>
 
@@ -431,3 +431,4 @@
     </footer>
 </body>
 </html>
+
