--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <section class="content-section">
             <h2 class="section-title">About This Portfolio</h2>
             <p style="font-size: 1.05rem; color: var(--color-text-light); line-height: 1.8; max-width: 800px;">
-                Cities are always fascinating—whether discussed casually or examined in depth. To speak about the city is to delve into the deepest layers of human anthropology,
+                Cities are always fascinating: whether discussed casually or examined in depth. To speak about the city is to delve into the deepest layers of human anthropology,
                 intertwined with a multitude of complex forces that make it endlessly compelling to study. The city is an entity that is never complete.
                 This modest portfolio exists to express my seriousness and affection for urban studies.
             </p>
@@ -118,6 +118,7 @@
     </script>
 </body>
 </html>
+
 
 
 
