--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p style="font-size: 1.05rem; color: var(--color-text-light); line-height: 1.8; max-width: 800px;">
                 Cities are always fascinating: whether discussed casually or examined in depth. To speak about the city is to delve into the deepest layers of human anthropology,
                 intertwined with a multitude of complex forces that make it endlessly compelling to study. The city is an entity that is never complete.
-                This modest portfolio exists to express my seriousness and affection for urban studies.
+                This modest portfolio exists to express my seriousness and affection for geography and the study of cities and settlements using spatial analysis and planning approach.
             </p>
             <a href="about.html" class="view-map-btn" style="margin-top: 2rem;">Learn More About Me</a>
         </section>
@@ -118,6 +118,7 @@
     </script>
 </body>
 </html>
+
 
 
 
