--- a/project-cbd.html
+++ b/project-cbd.html
@@ -138,11 +138,11 @@
         <!-- WebGIS Embed -->
         <div class="project-visual">
             <iframe width="100%"
-            height="488"
-            frameborder="0"
-            title="CBD Delineation Map"
-            src="https://felt.com/embed/map/CBD-Delineation-in-South-Tangerang-City-FE71a0ANTE2qsH9CNVs9BHUB?loc=-6.296317%2C106.662749%2C15.51z&legend=1&cooperativeGestures=1&link=1&geolocation=0&zoomControls=1&scaleBar=0"
-            referrerpolicy="strict-origin-when-cross-origin">
+                height="488"
+                frameborder="0"
+                title="CBD Area in South Tangerang City"
+                src="https://felt.com/embed/map/CBD-Delineation-in-South-Tangerang-City-FE71a0ANTE2qsH9CNVs9BHUB?loc=-6.29056%2C106.65989%2C15z&legend=1&cooperativeGestures=1&link=1&geolocation=0&zoomControls=1&scaleBar=1"
+                referrerpolicy="strict-origin-when-cross-origin">
             </iframe>
         </div>
 
@@ -180,6 +180,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
