--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="skill-item">
                         <h3>Specialization</h3>
-                        <p>Geomorphology (fluvial, karst, volcano), Basin hydrology, Climatology, Urban studies, Regional planning, Spatial analysis, Remote sensing</p>
+                        <p>Geomorphology (fluvial), Basin hydrology, Climatology, Urban studies, Regional planning, Spatial analysis, Remote sensing</p>
                     </div>
                     <div class="skill-item">
                         <h3>Spatial Analysis</h3>
@@ -116,4 +116,5 @@
         });
     </script>
 </body>
+
 </html>
