--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <img src="assets/img/bintaro_jaya_cbd.png" alt="Bintaro Jaya CBD" class="project-thumbnail">
                     <h3>CBD Delineation in South Tangerang</h3>
                     <p class="project-meta-preview">Urban Geography</p>
-                    <p>Central Business District delineation analysis using spatial weighting approach to identify the characteristics and boundaries of the CBD area.</p>
+                    <p>CBD delineation using spatial weighting approach to identify the characteristics and boundaries of the CBD area.</p>
                 </a>
                 
                 <!-- Project 2 -->
@@ -56,7 +56,7 @@
                     <img src="assets/img/agri-field.png" alt="Agricultural Fields" class="project-thumbnail">
                     <h3>Agriculture in the Vicinity of Rural Settlements</h3>
                     <p class="project-meta-preview">Agricultural Geography</p>
-                    <p>A Buffer-Based Remote Sensing Analysis Using Useful Spectral Indicies for Monitoring Agricultural Health.</p>
+                    <p>A buffer-based remote sensing analysis using useful spectral indicies for monitoring agricultural health within rural settlements.</p>
                 </a>
 
                 <!-- Project 2 -->
@@ -116,6 +116,7 @@
     </script>
 </body>
 </html>
+
 
 
 
